syntax = "proto3";

package rooms;

option go_package = "github.com/dimitarsi/go-chat-app/grpc/room";

import "proto/shared.proto";

service Rooms {
    rpc CreateRoom(CreateRoomRequest) returns(NewRoomResponse);
    rpc JoinRoom(JoinRequest) returns(JoinResponse);
    rpc LeaveRoom(LeaveRequest) returns(LeaveResponse);
    // TODO: return stream here
    rpc FindRoom(SearchRequest) returns(RoomsFoundResponse);
    rpc RoomDetails(RoomDetailsRequest) returns (stream RoomDetailsResponse);
}

message CreateRoomRequest {
    string room_name = 1;
}

message NewRoomResponse {
    shared.Room room = 1;
}

message JoinRequest {
    string room_id = 1;
    string user_id = 2;
}

message JoinResponse {
    enum JoinStatus {
        ALLOWED = 0;
        DENIED = 1;
    }

    JoinStatus status = 1;
}

message LeaveRequest {
    string room_id = 1;
}

message LeaveResponse {

}

message SearchRequest {
    string term = 1;
}

message RoomsFoundResponse {
    repeated shared.Room rooms_found = 1;
}

message RoomDetailsRequest {
    string room_id = 1;
}

message RoomDetailsResponse {
    message Participants {
        repeated shared.User users = 1;
        int32 count = 2;
    }

    Participants participants = 1;
}

